# frisbee-detection

./: .env.example  .gitignore  README.md  architecture.md  center_frisbee_image.py  center_frisbee_images.py  constants.py  draw_frisbee_box.py  images_to_video.py  pyproject.toml  requirements.txt
src/: __init__.py  api.py  batch.py  centering.py  cli.py  config.py  image_io.py  paths.py  video.py
