[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "frisbee-detection"
version = "0.1.0"
description = "Detect, center, and compose frisbee image outputs."
requires-python = ">=3.11"
dependencies = [
    "Pillow",
    "inference-sdk",
    "python-dotenv",
]

[project.scripts]
frisbee = "src.cli:main"

[tool.setuptools]
packages = ["src"]
